# landwatch

./: .travis.yml  LICENSE  README.md  environment.yml  pyproject.toml
app/: package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
app/components/: layout.tsx  map.tsx
app/pages/: _app.tsx  _template.jsx  index.tsx  map.tsx
app/styles/: globals.css
db/: README.md  __init__.py  __main__.py  cli.py  test_cli.py
db/get/: __init__.py  test_util.py
db/get/bills/: __init__.py  billdb.py  bills.py  cli.py
db/get/lands/: usgs.py  wdpa.py
db/get/legislators/: legdb.py  propub_spon_cache.sqlite
deploy/: README.md
deploy/templates/: ecr.tf  ecs.tf  main.tf  variables.tfvars
landwatch/: README.md  __init__.py  cli.py  prefect_utils.py  test_cli.py
landwatch/get/: NOTES.md  README.md  __init__.py  lands.py  test_util.py  util.py
landwatch/get/bills/: billdb.py  bills.py  cli.py  congress.py
landwatch/get/finance/: __init__.py  cli.py  opensecrets.py
landwatch/get/lands/: NOTES.md  __init__.py  cli.py  usgs.py  wdpa.py
landwatch/get/legislators/: __init__.py  cli.py  legdb.py  legislators.py
